Added html code into index, contact, and portfolio files

--- a/index.html
+++ b/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Erik's Portfolio</title>
 </head>
 <body>
-    
+    <header>
+            <h1>Erik Stephenson</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                </ul>
+            </nav>
+    </header>
+    <main>
+       <section aria-lavelledby="#">
+           <h2 id="#"></h2>
+           <div><img src="#" alt="#"></div>
+           <div><img src="#" alt="#"></div>
+           <div><img src="#" alt="#"></div>
+           <div><img src="#" alt="#"></div>
+       </section>
+       <section aria-labeledby="about me">
+           <h2 id="About Me"></h2>
+           <p>Velit nostrud qui amet eu et nulla pariatur magna qui culpa. Minim voluptate adipisicing enim adipisicing commodo labore ad consectetur id qui laborum excepteur culpa officia. Adipisicing pariatur excepteur exercitation ullamco. Nostrud quis occaecat proident non duis eu est.</p>
+           <p>Ipsum consectetur proident tempor quis labore est in. Nostrud non ipsum occaecat cillum ullamco non commodo laboris esse sint. Aliqua amet quis cupidatat ex nisi non Lorem pariatur et laborum dolor nulla ullamco. Occaecat consequat aliqua officia officia. In sunt magna qui do eu velit consequat. Consequat tempor excepteur eu est est Lorem ut ex cillum in magna duis elit. Ullamco et minim laborum ex velit deserunt qui voluptate proident labore.</p>
+       </section>
+    </main>
+    <footer>
+        <div class="halfer"></div>
+        <div class="halfer"></div>
+        <div>
+            <ul>
+                <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
