--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Erik's Portfolio</title>
 </head>
 <body>
-    
+
+     <header>
+            <h1>Portfolio</h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                    </ul>
+                </nav>
+        </header>
+      
+        <main>
+            <div>
+                <h2>Tacos</h2>
+                <ul>
+                    <li>Sint nisi aliqua irure nostrud irure.</li>
+                    <li>Fugiat aliqua nulla ex quis aliquip eiusmod excepteur eiusmod ad do occaecat dolor nostrud est.</li>
+                    <li>Aliqua excepteur Lorem velit veniam in.</li>
+                    <li>Elit pariatur proident ut occaecat consequat exercitation cupidatat ullamco esse excepteur reprehenderit exercitation.</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Burritos</h2>
+                <ul>
+                    <li>Eiusmod non dolore exercitation dolore quis mollit magna in cillum reprehenderit ut.</li>
+                    <li>Culpa et cupidatat ullamco exercitation esse est ipsum Lorem.</li>
+                    <li>Consectetur sunt est pariatur ea velit mollit in.</li>
+                    <li>Et mollit in minim culpa Lorem.</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Quesadillas</h2>
+                <ul>
+                    <li>Minim irure sunt reprehenderit amet in.</li>
+                    <li>Ad et magna dolor proident dolore sunt do.</li>
+                    <li>Est veniam ullamco sunt proident.</li>
+                    <li>Duis cillum fugiat sit enim est.</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Nachos</h2>
+                <ul>
+                    <li>Sint cillum cupidatat eu adipisicing culpa consequat aute aliqua sit reprehenderit nostrud amet.</li>
+                    <li>Est aliqua velit excepteur ea ipsum proident qui adipisicing.</li>
+                    <li>Velit nisi enim amet duis duis anim enim occaecat.</li>
+                    <li>Amet occaecat mollit magna mollit dolore laborum ea excepteur est dolor Lorem tempor cillum.</li>
+                </ul>
+            </div>
+        </main>
+        <footer>
+            <div class="halfer"></div>
+            <div class="halfer"></div>
+            <div>
+                <ul>
+                    <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                </ul>
+            </div>
+     </footer>
+
 </body>
 </html>
