--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Erik's Portfolio</title>
 </head>
 <body>
-    
-</body>
-</html>
+    <header>
+         <h1>Contact</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                </ul>
+             </nav>
+    </header>
+         <main>
+            <p>Incididunt non enim occaecat id proident. Ullamco nulla ullamco in non anim quis minim excepteur ipsum enim veniam id pariatur. Labore labore aute anim tempor excepteur cillum. Id nostrud culpa ipsum consectetur reprehenderit ullamco sit quis quis magna magna duis. Amet cupidatat ut ut dolore exercitation consequat deserunt non aliqua labore quis fugiat laborum officia.</p>
+            <form>
+                <label>
+                    Name
+                    <input type="text">
+                </label>
+                <label>
+                    email
+                    <input type"text">
+                </label>
+                <label>
+                    Comments
+                    <input type="textarea">
+                </label>
+            </form>
+        </main>
+        <footer>
+            <div class="halfer"></div>
+            <div class="halfer"></div>
+            <div>
+                <ul>
+                    <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                </ul>
+            </div>
+        </footer>
+ </body>
+ </html>
