Added copyright to footer, changed layout on contact page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Erik's Portfolio</title>
+    <!--Scripts-->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <!--Styles-->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -18,6 +22,17 @@
             </nav>
     </header>
     <main>
+        <secion id ="connect with me">
+                <div>
+                    <h2>Connect With Me</h2>
+                    <ul>
+                        <li><a href="https://github.com/estep12"><i class="fab fa-github-square"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><i class="fab fa-stack-overflow"></i></a></li>
+                    </ul>
+                </div>
+        </secion>
+
        <section aria-lavelledby="#">
            <h2 id="#"></h2>
            <div><img src="#" alt="#"></div>
@@ -29,18 +44,13 @@
            <h2 id="About Me"></h2>
            <p>Velit nostrud qui amet eu et nulla pariatur magna qui culpa. Minim voluptate adipisicing enim adipisicing commodo labore ad consectetur id qui laborum excepteur culpa officia. Adipisicing pariatur excepteur exercitation ullamco. Nostrud quis occaecat proident non duis eu est.</p>
            <p>Ipsum consectetur proident tempor quis labore est in. Nostrud non ipsum occaecat cillum ullamco non commodo laboris esse sint. Aliqua amet quis cupidatat ex nisi non Lorem pariatur et laborum dolor nulla ullamco. Occaecat consequat aliqua officia officia. In sunt magna qui do eu velit consequat. Consequat tempor excepteur eu est est Lorem ut ex cillum in magna duis elit. Ullamco et minim laborum ex velit deserunt qui voluptate proident labore.</p>
-       </section>
+       </section> 
     </main>
+
     <footer>
-        <div class="halfer"></div>
-        <div class="halfer"></div>
-        <div>
-            <ul>
-                <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
-                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            </ul>
-        </div>
+        <h6>
+            <p>&#169; Copyright 2018 Erik Stephenson</p>                  
+        </h6>
     </footer>
 </body>
 </html>
