--- a/portfolio.html
+++ b/portfolio.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Erik's Portfolio</title>
+    <!--Scripts-->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <!--Styles-->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
      <header>
-            <h1>Portfolio</h1>
+            <h1>Erik Stephenson</h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">About</a></li>
@@ -19,9 +23,9 @@
                 </nav>
         </header>
       
-        <main>
+    <main>
             <div>
-                <h2>Tacos</h2>
+                <h2>Hangman</h2>
                 <ul>
                     <li>Sint nisi aliqua irure nostrud irure.</li>
                     <li>Fugiat aliqua nulla ex quis aliquip eiusmod excepteur eiusmod ad do occaecat dolor nostrud est.</li>
@@ -30,7 +34,7 @@
                 </ul>
             </div>
             <div>
-                <h2>Burritos</h2>
+                <h2>RPG Game</h2>
                 <ul>
                     <li>Eiusmod non dolore exercitation dolore quis mollit magna in cillum reprehenderit ut.</li>
                     <li>Culpa et cupidatat ullamco exercitation esse est ipsum Lorem.</li>
@@ -39,7 +43,7 @@
                 </ul>
             </div>
             <div>
-                <h2>Quesadillas</h2>
+                <h2>Trivia Game</h2>
                 <ul>
                     <li>Minim irure sunt reprehenderit amet in.</li>
                     <li>Ad et magna dolor proident dolore sunt do.</li>
@@ -48,7 +52,7 @@
                 </ul>
             </div>
             <div>
-                <h2>Nachos</h2>
+                <h2>Rutgers Info Widget</h2>
                 <ul>
                     <li>Sint cillum cupidatat eu adipisicing culpa consequat aute aliqua sit reprehenderit nostrud amet.</li>
                     <li>Est aliqua velit excepteur ea ipsum proident qui adipisicing.</li>
@@ -56,18 +60,34 @@
                     <li>Amet occaecat mollit magna mollit dolore laborum ea excepteur est dolor Lorem tempor cillum.</li>
                 </ul>
             </div>
-        </main>
-        <footer>
-            <div class="halfer"></div>
-            <div class="halfer"></div>
             <div>
+                <h2>Rock Paper Scissors</h2>
                 <ul>
-                    <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li>Sint cillum cupidatat eu adipisicing culpa consequat aute aliqua sit reprehenderit nostrud amet.</li>
+                    <li>Est aliqua velit excepteur ea ipsum proident qui adipisicing.</li>
+                    <li>Velit nisi enim amet duis duis anim enim occaecat.</li>
+                    <li>Amet occaecat mollit magna mollit dolore laborum ea excepteur est dolor Lorem tempor cillum.</li>
                 </ul>
             </div>
-     </footer>
+       
+
+        <secion id ="connect with me">
+            <div>
+                <h2>Connect With Me</h2>
+                <ul>
+                    <li><a href="https://github.com/estep12"><i class="fab fa-github-square"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><i class="fab fa-stack-overflow"></i></a></li>
+                </ul>
+            </div>
+        </secion>
+    </main>
+
+    <footer>
+            <h6>
+                <p>&#169; Copyright 2018 Erik Stephenson</p>                  
+            </h6>
+    </footer>
 
 </body>
 </html>
