--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Erik's Portfolio</title>
+    <!--Scripts-->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <!--Styles-->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-         <h1>Contact</h1>
+         <h1>Erik Stephenson</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">About</a></li>
@@ -17,33 +21,39 @@
                 </ul>
              </nav>
     </header>
-         <main>
-            <p>Incididunt non enim occaecat id proident. Ullamco nulla ullamco in non anim quis minim excepteur ipsum enim veniam id pariatur. Labore labore aute anim tempor excepteur cillum. Id nostrud culpa ipsum consectetur reprehenderit ullamco sit quis quis magna magna duis. Amet cupidatat ut ut dolore exercitation consequat deserunt non aliqua labore quis fugiat laborum officia.</p>
+    <main>
+            <p>Contact</p>
             <form>
                 <label>
                     Name
                     <input type="text">
                 </label>
                 <label>
-                    email
+                    Email
                     <input type"text">
                 </label>
                 <label>
-                    Comments
+                    Message
                     <input type="textarea">
                 </label>
             </form>
-        </main>
-        <footer>
-            <div class="halfer"></div>
-            <div class="halfer"></div>
-            <div>
-                <ul>
-                    <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                </ul>
-            </div>
-        </footer>
+       
+        <secion id ="connect with me">
+        <div>
+            <h2>Connect With Me</h2>
+            <ul>
+                <li><a href="https://github.com/estep12"><i class="fab fa-github-square"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><i class="fab fa-stack-overflow"></i></a></li>
+            </ul>
+        </div>
+        </secion>
+    </main>
+
+    <footer>
+        <h6>
+            <p>&#169; Copyright 2018 Erik Stephenson</p>                  
+        </h6>
+    </footer>
  </body>
  </html>
