added images to image folder and some css elements

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <!--Scripts-->
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <!--Styles-->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assests/css/style.css">
 </head>
 <body>
     <header>
@@ -21,8 +21,8 @@
                 </ul>
              </nav>
     </header>
-    <main>
-            <p>Contact</p>
+    <main class="container">
+            <h2>Contact</h2>
             <form>
                 <label>
                     Name
@@ -35,6 +35,10 @@
                 <label>
                     Message
                     <input type="textarea">
+                </label>
+                <label>
+                    Submit
+                    <button type="button">Submit</button>
                 </label>
             </form>
        
