--- a/portfolio.html
+++ b/portfolio.html
@@ -8,10 +8,9 @@
     <!--Scripts-->
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <!--Styles-->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assests/css/style.css">
 </head>
 <body>
-
      <header>
             <h1>Erik Stephenson</h1>
                 <nav>
@@ -23,54 +22,16 @@
                 </nav>
         </header>
       
-    <main>
-            <div>
-                <h2>Hangman</h2>
-                <ul>
-                    <li>Sint nisi aliqua irure nostrud irure.</li>
-                    <li>Fugiat aliqua nulla ex quis aliquip eiusmod excepteur eiusmod ad do occaecat dolor nostrud est.</li>
-                    <li>Aliqua excepteur Lorem velit veniam in.</li>
-                    <li>Elit pariatur proident ut occaecat consequat exercitation cupidatat ullamco esse excepteur reprehenderit exercitation.</li>
-                </ul>
-            </div>
-            <div>
-                <h2>RPG Game</h2>
-                <ul>
-                    <li>Eiusmod non dolore exercitation dolore quis mollit magna in cillum reprehenderit ut.</li>
-                    <li>Culpa et cupidatat ullamco exercitation esse est ipsum Lorem.</li>
-                    <li>Consectetur sunt est pariatur ea velit mollit in.</li>
-                    <li>Et mollit in minim culpa Lorem.</li>
-                </ul>
-            </div>
-            <div>
-                <h2>Trivia Game</h2>
-                <ul>
-                    <li>Minim irure sunt reprehenderit amet in.</li>
-                    <li>Ad et magna dolor proident dolore sunt do.</li>
-                    <li>Est veniam ullamco sunt proident.</li>
-                    <li>Duis cillum fugiat sit enim est.</li>
-                </ul>
-            </div>
-            <div>
-                <h2>Rutgers Info Widget</h2>
-                <ul>
-                    <li>Sint cillum cupidatat eu adipisicing culpa consequat aute aliqua sit reprehenderit nostrud amet.</li>
-                    <li>Est aliqua velit excepteur ea ipsum proident qui adipisicing.</li>
-                    <li>Velit nisi enim amet duis duis anim enim occaecat.</li>
-                    <li>Amet occaecat mollit magna mollit dolore laborum ea excepteur est dolor Lorem tempor cillum.</li>
-                </ul>
-            </div>
-            <div>
-                <h2>Rock Paper Scissors</h2>
-                <ul>
-                    <li>Sint cillum cupidatat eu adipisicing culpa consequat aute aliqua sit reprehenderit nostrud amet.</li>
-                    <li>Est aliqua velit excepteur ea ipsum proident qui adipisicing.</li>
-                    <li>Velit nisi enim amet duis duis anim enim occaecat.</li>
-                    <li>Amet occaecat mollit magna mollit dolore laborum ea excepteur est dolor Lorem tempor cillum.</li>
-                </ul>
-            </div>
-       
-
+    <main class="container">
+        <h2>Portfolio</h2>
+        <section aria-lavelledby="pictures of icons">
+                <h2 id="pictures of icons"></h2>
+                <div><img src="http://www.placepuppy.net/1p/400/250" alt="Hangman"></div>
+                <div><img src="http://www.placepuppy.net/1p/400/250" alt="RPG Game"></div>
+                <div><img src="http://www.placepuppy.net/1p/400/250" alt="Trivia Game"></div>
+                <div><img src="http://www.placepuppy.net/1p/400/250" alt="Rutgers Info Widget"></div>
+                <div><img src="http://www.placepuppy.net/1p/400/250" alt="Rock Paper Scissors"></div>
+            </section>
         <secion id ="connect with me">
             <div>
                 <h2>Connect With Me</h2>
