--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!--Scripts-->
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <!--Styles-->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assests/css/style.css">
 </head>
 <body>
-    <header>
+    <header >
             <h1>Erik Stephenson</h1>
             <nav>
                 <ul>
@@ -21,7 +21,7 @@
                 </ul>
             </nav>
     </header>
-    <main>
+    <main class="container">
         <secion id ="connect with me">
                 <div>
                     <h2>Connect With Me</h2>
@@ -33,12 +33,8 @@
                 </div>
         </secion>
 
-       <section aria-lavelledby="#">
-           <h2 id="#"></h2>
-           <div><img src="#" alt="#"></div>
-           <div><img src="#" alt="#"></div>
-           <div><img src="#" alt="#"></div>
-           <div><img src="#" alt="#"></div>
+       <section aria-lavelledby="pic of me">
+           <div><img src="./assests/images/Profile picture.jpg" alt="picture of Erik"></div>
        </section>
        <section aria-labeledby="about me">
            <h2 id="About Me"></h2>
