--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <!--Styles-->
     <link rel="stylesheet" href="./assests/css/style.css">
+    
 </head>
+
 <body>
-    <header >
-            <h1>Erik Stephenson</h1>
-            <nav>
+    <header class="header">
+            <div id="name">
+                <h1>Erik Stephenson</h1>
+            </div>
+            <nav class="pagelinks">
                 <ul>
                     <li><a href="#">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -21,32 +25,42 @@
                 </ul>
             </nav>
     </header>
-    <main class="container">
-        <secion id ="connect with me">
-                <div>
+
+    <div class="container">
+        <div class="contai"> 
+            <div id ="connect">
                     <h2>Connect With Me</h2>
-                    <ul>
+                    <ul id="links">
                         <li><a href="https://github.com/estep12"><i class="fab fa-github-square"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><i class="fab fa-linkedin"></i></a></li>
                         <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><i class="fab fa-stack-overflow"></i></a></li>
                     </ul>
                 </div>
-        </secion>
+        </div>
 
-       <section aria-lavelledby="pic of me">
-           <div><img src="./assests/images/Profile picture.jpg" alt="picture of Erik"></div>
-       </section>
-       <section aria-labeledby="about me">
-           <h2 id="About Me"></h2>
-           <p>Velit nostrud qui amet eu et nulla pariatur magna qui culpa. Minim voluptate adipisicing enim adipisicing commodo labore ad consectetur id qui laborum excepteur culpa officia. Adipisicing pariatur excepteur exercitation ullamco. Nostrud quis occaecat proident non duis eu est.</p>
-           <p>Ipsum consectetur proident tempor quis labore est in. Nostrud non ipsum occaecat cillum ullamco non commodo laboris esse sint. Aliqua amet quis cupidatat ex nisi non Lorem pariatur et laborum dolor nulla ullamco. Occaecat consequat aliqua officia officia. In sunt magna qui do eu velit consequat. Consequat tempor excepteur eu est est Lorem ut ex cillum in magna duis elit. Ullamco et minim laborum ex velit deserunt qui voluptate proident labore.</p>
-       </section> 
-    </main>
+        <div class="mainbio">
+        <div>
+            <div id="mainbio">
+                <img id="picofme" src="./assests/images/Profile picture.jpg" alt="picture of Erik">
+            </div>
+        </div>
+          
+        <div class="col-sm-6">
+            <div class="panel panel-primary">
+            <div class="panel-heading">About Me</div>
+                <div class="panel body">
+                    <p>Velit nostrud qui amet eu et nulla pariatur magna qui culpa. Minim voluptate adipisicing enim adipisicing commodo labore ad consectetur id qui laborum excepteur culpa officia. Adipisicing pariatur excepteur exercitation ullamco. Nostrud quis occaecat proident non duis eu est.</p>
+                    <p>Ipsum consectetur proident tempor quis labore est in. Nostrud non ipsum occaecat cillum ullamco non commodo laboris esse sint. Aliqua amet quis cupidatat ex nisi non Lorem pariatur et laborum dolor nulla ullamco. Occaecat consequat aliqua officia officia. In sunt magna qui do eu velit consequat. Consequat tempor excepteur eu est est Lorem ut ex cillum in magna duis elit. Ullamco et minim laborum ex velit deserunt qui voluptate proident labore.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <h6>
             <p>&#169; Copyright 2018 Erik Stephenson</p>                  
         </h6>
     </footer>
+
 </body>
 </html>
