--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 
 <body>
     <header class="header">
-            <div id="name">
-                <h1>Erik Stephenson</h1>
-            </div>
             <nav class="pagelinks">
                 <ul>
                     <li><a href="#">About</a></li>
@@ -24,22 +21,23 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
             </nav>
+         <div id="name">
+            <h1>Erik Stephenson</h1>
+        </div>
     </header>
 
-    <div class="container">
-        <div class="contai"> 
-            <div id ="connect">
-                    <h2>Connect With Me</h2>
-                    <ul id="links">
-                        <li><a href="https://github.com/estep12"><i class="fab fa-github-square"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><i class="fab fa-linkedin"></i></a></li>
-                        <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><i class="fab fa-stack-overflow"></i></a></li>
-                    </ul>
-                </div>
+    <main class="container"> 
+        <div id ="connect">
+             <h2>Connect With Me</h2>
+                <ul id="links">
+                    <li><a href="https://github.com/estep12"><i class="fab fa-github-square"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><i class="fab fa-stack-overflow"></i></a></li>
+                </ul>
         </div>
+     </div>
 
         <div class="mainbio">
-        <div>
             <div id="mainbio">
                 <img id="picofme" src="./assests/images/Profile picture.jpg" alt="picture of Erik">
             </div>
@@ -54,7 +52,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 
     <footer>
         <h6>
