styled connect and header. Added another picture to images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--Scripts-->
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <!--Styles-->
+    <link rel="stylesheet" href="./assests/css/reset.css">
     <link rel="stylesheet" href="./assests/css/style.css">
     
 </head>
@@ -27,7 +28,7 @@
     </header>
 
     <main class="container"> 
-        <div id ="connect">
+        <div class ="connect">
              <h2>Connect With Me</h2>
                 <ul id="links">
                     <li><a href="https://github.com/estep12"><i class="fab fa-github-square"></i></a></li>
@@ -35,22 +36,14 @@
                     <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><i class="fab fa-stack-overflow"></i></a></li>
                 </ul>
         </div>
-     </div>
 
         <div class="mainbio">
-            <div id="mainbio">
-                <img id="picofme" src="./assests/images/Profile picture.jpg" alt="picture of Erik">
-            </div>
-        </div>
-          
-        <div class="col-sm-6">
-            <div class="panel panel-primary">
-            <div class="panel-heading">About Me</div>
-                <div class="panel body">
+            <img id="picofme" src="./assests/images/Profile picture.jpg" alt="picture of Erik">
+            <h2>About Me</h2>
+                <div>
                     <p>Velit nostrud qui amet eu et nulla pariatur magna qui culpa. Minim voluptate adipisicing enim adipisicing commodo labore ad consectetur id qui laborum excepteur culpa officia. Adipisicing pariatur excepteur exercitation ullamco. Nostrud quis occaecat proident non duis eu est.</p>
                     <p>Ipsum consectetur proident tempor quis labore est in. Nostrud non ipsum occaecat cillum ullamco non commodo laboris esse sint. Aliqua amet quis cupidatat ex nisi non Lorem pariatur et laborum dolor nulla ullamco. Occaecat consequat aliqua officia officia. In sunt magna qui do eu velit consequat. Consequat tempor excepteur eu est est Lorem ut ex cillum in magna duis elit. Ullamco et minim laborum ex velit deserunt qui voluptate proident labore.</p>
                 </div>
-            </div>
         </div>
     </main>
 
