--- a/portfolio.html
+++ b/portfolio.html
@@ -8,19 +8,23 @@
     <!--Scripts-->
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <!--Styles-->
+    <link rel="stylesheet" href="./assests/css/reset.css">
     <link rel="stylesheet" href="./assests/css/style.css">
 </head>
 <body>
-     <header>
+    <header class="header">
+        <nav class="pagelinks">
+            <ul>
+                <li><a href="index.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Portfolio</a></li>
+            </ul>
+        </nav>
+
+        <div id="name">
             <h1>Erik Stephenson</h1>
-                <nav>
-                    <ul>
-                        <li><a href="index.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                    </ul>
-                </nav>
-        </header>
+        </div>
+    </header>
       
     <main class="container">
         <h2>Portfolio</h2>
