--- a/contact.html
+++ b/contact.html
@@ -8,19 +8,23 @@
     <!--Scripts-->
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <!--Styles-->
+    <link rel="stylesheet" href="./assests/css/reset.css">
     <link rel="stylesheet" href="./assests/css/style.css">
 </head>
 <body>
-    <header>
-         <h1>Erik Stephenson</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                </ul>
-             </nav>
+    <header class="header">
+        <nav class="pagelinks">
+            <ul>
+                <li><a href="index.html">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>
+        </nav>
+        <div id="name">
+            <h1>Erik Stephenson</h1>
+        </div>
     </header>
+
     <main class="container">
             <h2>Contact</h2>
             <form>
@@ -55,9 +59,9 @@
     </main>
 
     <footer>
-        <h6>
-            <p>&#169; Copyright 2018 Erik Stephenson</p>                  
-        </h6>
+            <h6>
+                <p>&#169; Copyright 2018 Erik Stephenson</p>                  
+            </h6>
     </footer>
  </body>
  </html>
