added icon pics to images. changed class and id's in index.html and changed styles in css.

--- a/index.html
+++ b/index.html
@@ -30,20 +30,19 @@
     <main class="container"> 
         <div class ="connect">
              <h2>Connect With Me</h2>
-                <ul id="links">
-                    <li><a href="https://github.com/estep12"><i class="fab fa-github-square"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><i class="fab fa-stack-overflow"></i></a></li>
+                <ul class="links">
+                    <li id="github"><a href="https://github.com/estep12"> <img src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/github.png"></a></li>
+                    <li id="linkedin"><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><img src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/linkedin.png"></a></li>
+                    <li id="stack"><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><img src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/stackoverflow.png"></a></li>
                 </ul>
         </div>
 
         <div class="mainbio">
-            <img id="picofme" src="./assests/images/Profile picture.jpg" alt="picture of Erik">
-            <h2>About Me</h2>
-                <div>
-                    <p>Velit nostrud qui amet eu et nulla pariatur magna qui culpa. Minim voluptate adipisicing enim adipisicing commodo labore ad consectetur id qui laborum excepteur culpa officia. Adipisicing pariatur excepteur exercitation ullamco. Nostrud quis occaecat proident non duis eu est.</p>
-                    <p>Ipsum consectetur proident tempor quis labore est in. Nostrud non ipsum occaecat cillum ullamco non commodo laboris esse sint. Aliqua amet quis cupidatat ex nisi non Lorem pariatur et laborum dolor nulla ullamco. Occaecat consequat aliqua officia officia. In sunt magna qui do eu velit consequat. Consequat tempor excepteur eu est est Lorem ut ex cillum in magna duis elit. Ullamco et minim laborum ex velit deserunt qui voluptate proident labore.</p>
-                </div>
+                <h2> About Me</h2>
+                <div><img id="picofme" src="./assests/images/Profile picture.jpg" alt="picture of Erik"></div>
+                <p>Velit nostrud qui amet eu et nulla pariatur magna qui culpa. Minim voluptate adipisicing enim adipisicing commodo labore ad consectetur id qui laborum excepteur culpa officia. Adipisicing pariatur excepteur exercitation ullamco. Nostrud quis occaecat proident non duis eu est.</p>
+                <p>Ipsum consectetur proident tempor quis labore est in. Nostrud non ipsum occaecat cillum ullamco non commodo laboris esse sint. Aliqua amet quis cupidatat ex nisi non Lorem pariatur et laborum dolor nulla ullamco. Occaecat consequat aliqua officia officia. In sunt magna qui do eu velit consequat. Consequat tempor excepteur eu est est Lorem ut ex cillum in magna duis elit. Ullamco et minim laborum ex velit deserunt qui voluptate proident labore.</p>
+            
         </div>
     </main>
 
