Added connect with me section to all pages as well as footer.

--- a/contact.html
+++ b/contact.html
@@ -46,21 +46,19 @@
                 </label>
             </form>
        
-        <secion id ="connect with me">
-        <div>
+        <div class ="connect">
             <h2>Connect With Me</h2>
-            <ul>
-                <li><a href="https://github.com/estep12"><i class="fab fa-github-square"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><i class="fab fa-stack-overflow"></i></a></li>
-            </ul>
+                <ul class="links">
+                    <li><a href="https://github.com/estep12"><img id="github" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/github.png"></a></li>
+                    <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><img id="linkedin" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/linkedin.png"></a></li>
+                    <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><img id="stack" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/stackoverflow.png"></a></li>
+                </ul>
         </div>
-        </secion>
     </main>
 
     <footer>
             <h6>
-                <p>&#169; Copyright 2018 Erik Stephenson</p>                  
+                &#169; Copyright 2018 Erik Stephenson                
             </h6>
     </footer>
  </body>
