--- a/portfolio.html
+++ b/portfolio.html
@@ -36,21 +36,19 @@
                 <div><img src="http://www.placepuppy.net/1p/400/250" alt="Rutgers Info Widget"></div>
                 <div><img src="http://www.placepuppy.net/1p/400/250" alt="Rock Paper Scissors"></div>
             </section>
-        <secion id ="connect with me">
-            <div>
-                <h2>Connect With Me</h2>
-                <ul>
-                    <li><a href="https://github.com/estep12"><i class="fab fa-github-square"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><i class="fab fa-stack-overflow"></i></a></li>
+        <div class ="connect">
+            <h2>Connect With Me</h2>
+                <ul class="links">
+                    <li><a href="https://github.com/estep12"><img id="github" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/github.png"></a></li>
+                    <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><img id="linkedin" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/linkedin.png"></a></li>
+                    <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><img id="stack" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/stackoverflow.png"></a></li>
                 </ul>
-            </div>
-        </secion>
+        </div>
     </main>
 
     <footer>
             <h6>
-                <p>&#169; Copyright 2018 Erik Stephenson</p>                  
+                &#169; Copyright 2018 Erik Stephenson                
             </h6>
     </footer>
 
