--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header class="header">
             <nav class="pagelinks">
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="#" id="about">About</a></li>
+                    <li><a href="contact.html" id="contact">Contact</a></li>
+                    <li><a href="portfolio.html" id="port">Portfolio</a></li>
                 </ul>
             </nav>
          <div id="name">
@@ -38,7 +38,7 @@
         </div>
 
         <div class="mainbio">
-                <h2 id="about"> About Me</h2>
+                <h2 id="aboutme"> About Me</h2>
                 <div><img id="picofme" src="./assests/images/Profile picture.jpg" alt="picture of Erik"></div>
                 <p>Velit nostrud qui amet eu et nulla pariatur magna qui culpa. Minim voluptate adipisicing enim adipisicing commodo labore ad consectetur id qui laborum excepteur culpa officia. Adipisicing pariatur excepteur exercitation ullamco. Nostrud quis occaecat proident non duis eu est.</p>
                 <p>Ipsum consectetur proident tempor quis labore est in. Nostrud non ipsum occaecat cillum ullamco non commodo laboris esse sint. Aliqua amet quis cupidatat ex nisi non Lorem pariatur et laborum dolor nulla ullamco. Occaecat consequat aliqua officia officia. In sunt magna qui do eu velit consequat. Consequat tempor excepteur eu est est Lorem ut ex cillum in magna duis elit. Ullamco et minim laborum ex velit deserunt qui voluptate proident labore.</p>
