added updated header to contact and portfolio page.

--- a/contact.html
+++ b/contact.html
@@ -15,15 +15,15 @@
     <header class="header">
         <nav class="pagelinks">
             <ul>
-                <li><a href="index.html">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="#" id="about">About</a></li>
+                <li><a href="contact.html" id="contact">Contact</a></li>
+                <li><a href="portfolio.html" id="port">Portfolio</a></li>
             </ul>
         </nav>
         <div id="name">
             <h1>Erik Stephenson</h1>
         </div>
-    </header>
+    </header>    
 
     <main class="container">
             <h2>Contact</h2>
