--- a/portfolio.html
+++ b/portfolio.html
@@ -13,14 +13,13 @@
 </head>
 <body>
     <header class="header">
-        <nav class="pagelinks">
-            <ul>
-                <li><a href="index.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">Portfolio</a></li>
-            </ul>
-        </nav>
-
+            <nav class="pagelinks">
+                <ul>
+                    <li><a href="#" id="about">About</a></li>
+                    <li><a href="contact.html" id="contact">Contact</a></li>
+                    <li><a href="portfolio.html" id="port">Portfolio</a></li>
+                </ul>
+            </nav>
         <div id="name">
             <h1>Erik Stephenson</h1>
         </div>
