Added images for portfolio page. Styled contact page.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div class ="connect">
              <h2>Connect With Me</h2>
                 <ul class="links">
-                    <li><a href="https://github.com/estep12"><img id="github" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/github.png"></a></li>
-                    <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><img id="linkedin" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/linkedin.png"></a></li>
-                    <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><img id="stack" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/stackoverflow.png"></a></li>
+                    <li><a href="https://github.com/estep12"><img id="github" src="./assests/images/github.png"></a></li>
+                    <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><img id="linkedin" src="./assests/images/linkedin.png"></a></li>
+                    <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><img id="stack" src="./assests/images/stackoverflow.png"></a></li>
                 </ul>
         </div>
 
