--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
     <header class="header">
             <nav class="pagelinks">
                 <ul>
-                    <li><a href="#" id="about">About</a></li>
+                    <li><a href="index.html" id="about">About</a></li>
                     <li><a href="contact.html" id="contact">Contact</a></li>
-                    <li><a href="portfolio.html" id="port">Portfolio</a></li>
+                    <li><a href="#" id="port">Portfolio</a></li>
                 </ul>
             </nav>
         <div id="name">
@@ -26,23 +26,27 @@
     </header>
       
     <main class="container">
-        <h2>Portfolio</h2>
-        <section aria-lavelledby="pictures of icons">
-                <h2 id="pictures of icons"></h2>
-                <div><img src="http://www.placepuppy.net/1p/400/250" alt="Hangman"></div>
-                <div><img src="http://www.placepuppy.net/1p/400/250" alt="RPG Game"></div>
-                <div><img src="http://www.placepuppy.net/1p/400/250" alt="Trivia Game"></div>
-                <div><img src="http://www.placepuppy.net/1p/400/250" alt="Rutgers Info Widget"></div>
-                <div><img src="http://www.placepuppy.net/1p/400/250" alt="Rock Paper Scissors"></div>
-            </section>
         <div class ="connect">
             <h2>Connect With Me</h2>
                 <ul class="links">
-                    <li><a href="https://github.com/estep12"><img id="github" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/github.png"></a></li>
-                    <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><img id="linkedin" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/linkedin.png"></a></li>
-                    <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><img id="stack" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/stackoverflow.png"></a></li>
+                    <li><a href="https://github.com/estep12"><img id="github" src="./assests/images/github.png"></a></li>
+                    <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><img id="linkedin" src="./assests/images/linkedin.png"></a></li>
+                    <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><img id="stack" src="./assests/images/stackoverflow.png"></a></li>
                 </ul>
         </div>
+
+
+    <div class="portfolio">
+        <h2 id="portfoliotext">Portfolio</h2>
+            <div class="images">
+                    <img src="./assests/images/cats.jpg" alt="Hangman" id="hangman">
+                    <img src="./assests/images/food.jpg" alt="RPG Game" id="rpg">
+                    <img src="./assests/images/technics.jpg" alt="Trivia Game" id="trivia">
+                    <img src="./assests/images/cats2.jpg" alt="Rutgers Info Widget" id="rutgers">
+                    <img src="./assests/images/nightlife.jpg" alt="Rock Paper Scissors" id="rps">
+            </div>
+    </div>    
+        
     </main>
 
     <footer>
