--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
     <header class="header">
         <nav class="pagelinks">
             <ul>
-                <li><a href="#" id="about">About</a></li>
-                <li><a href="contact.html" id="contact">Contact</a></li>
+                <li><a href="index.html" id="about">About</a></li>
+                <li><a href="#" id="contact">Contact</a></li>
                 <li><a href="portfolio.html" id="port">Portfolio</a></li>
             </ul>
         </nav>
@@ -26,34 +26,36 @@
     </header>    
 
     <main class="container">
-            <h2>Contact</h2>
-            <form>
-                <label>
-                    Name
-                    <input type="text">
-                </label>
-                <label>
-                    Email
-                    <input type"text">
-                </label>
-                <label>
-                    Message
-                    <input type="textarea">
-                </label>
-                <label>
-                    Submit
-                    <button type="button">Submit</button>
-                </label>
-            </form>
-       
         <div class ="connect">
             <h2>Connect With Me</h2>
                 <ul class="links">
-                    <li><a href="https://github.com/estep12"><img id="github" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/github.png"></a></li>
-                    <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><img id="linkedin" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/linkedin.png"></a></li>
-                    <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><img id="stack" src="/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/stackoverflow.png"></a></li>
+                    <li><a href="https://github.com/estep12"><img id="github" src="./assests/images/github.png"></a></li>
+                    <li><a href="https://www.linkedin.com/in/erik-stephenson-524898102/"><img id="linkedin" src="./assests/images/linkedin.png"></a></li>
+                    <li><a href="https://stackoverflow.com/users/9125142/estep16?tab=profile"><img id="stack" src="./assests/images/stackoverflow.png"></a></li>
                 </ul>
         </div>
+
+        <div class="contact">
+            <h2 id="contact2">Contact</h2>
+            <form class="form">
+                <label>
+                    Name
+                    <input type="text" class="labelsmall" placeholder="John Smith">
+                </label>
+                <label>
+                    Email
+                    <input type"text" class="labelsmall" placeholder="example@gmail.com">
+                </label>
+                <label>
+                    Message
+                    <input type="textarea" id="labelbig">
+                </label>
+                <label>
+                    <input type="submit">
+                </label>
+            </form>
+        </div>
+       
     </main>
 
     <footer>
