--- a/portfolio.html
+++ b/portfolio.html
@@ -39,10 +39,15 @@
     <div class="portfolio">
         <h2 id="portfoliotext">Portfolio</h2>
             <div class="images">
+                    <h3 id="hangmantext">Hangman</h3>
+                    <h3 id="rpgtext">RPG Game</h3>
                     <img src="./assests/images/cats.jpg" alt="Hangman" id="hangman">
                     <img src="./assests/images/food.jpg" alt="RPG Game" id="rpg">
+                    <h3 id="triviatext"> Trivia Game</h3>
+                    <h3 id="rutgerstext">Rutgers Info Widget</h3>
                     <img src="./assests/images/technics.jpg" alt="Trivia Game" id="trivia">
                     <img src="./assests/images/cats2.jpg" alt="Rutgers Info Widget" id="rutgers">
+                    <h3 id="rpstext">Rock Paper Scissors</h3>
                     <img src="./assests/images/nightlife.jpg" alt="Rock Paper Scissors" id="rps">
             </div>
     </div>    
