changed order of page links in nav bar. Added info to my bio on the index page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <nav class="pagelinks">
                 <ul>
                     <li><a href="#" id="about">About</a></li>
-                    <li><a href="contact.html" id="contact">Contact</a></li>
                     <li><a href="portfolio.html" id="port">Portfolio</a></li>
+                    <li><a href="contact.html" id="contact">Contact</a></li>
                 </ul>
             </nav>
          <div id="name">
@@ -40,8 +40,8 @@
         <div class="mainbio">
                 <h2 id="aboutme"> About Me</h2>
                 <div><img id="picofme" src="./assests/images/Profile picture.jpg" alt="picture of Erik"></div>
-                <p>Velit nostrud qui amet eu et nulla pariatur magna qui culpa. Minim voluptate adipisicing enim adipisicing commodo labore ad consectetur id qui laborum excepteur culpa officia. Adipisicing pariatur excepteur exercitation ullamco. Nostrud quis occaecat proident non duis eu est.</p>
-                <p>Ipsum consectetur proident tempor quis labore est in. Nostrud non ipsum occaecat cillum ullamco non commodo laboris esse sint. Aliqua amet quis cupidatat ex nisi non Lorem pariatur et laborum dolor nulla ullamco. Occaecat consequat aliqua officia officia. In sunt magna qui do eu velit consequat. Consequat tempor excepteur eu est est Lorem ut ex cillum in magna duis elit. Ullamco et minim laborum ex velit deserunt qui voluptate proident labore.</p>
+                <p>Hello, my name's Erik Stephenson and I hail from Austin, MN otherwise known as Spamtown USA. Outside of coding I enjoy playing and watching sports, especially basketball, spending time outdoors and catching some live music whenever possible.  </p>
+                <p> </p>
             
         </div>
     </main>
