--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="mainbio">
                 <h2 id="aboutme"> About Me</h2>
                 <div><img id="picofme" src="./assests/images/Profile picture.jpg" alt="picture of Erik"></div>
-                <p>Hello, my name's Erik Stephenson and I hail from Austin, MN otherwise known as Spamtown USA. Outside of coding I enjoy playing and watching sports, especially basketball, spending time outdoors and catching some live music whenever possible.  </p>
-                <p> </p>
+                <p> Hello, my name's Erik Stephenson and I hail from Austin, MN otherwise known as Spamtown USA. Outside of coding I enjoy playing and watching sports, especially basketball, spending time outdoors and catching some live music whenever possible.  </p>
+                <p> I decided to start my coding journey in the fall 2017 after deciding I wanted to change career paths. I am hoping after graduating, I will be able to use the skills I learned in the course to do just that and pursue a career in tech.</p>
             
         </div>
     </main>
